# iot_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/db/: dbdesign.md  iot_backend_db.sql
src/iot_backend/: __init__.py
src/iot_backend/api_user/: base.py
src/iot_backend/postgres_connector/: postgres_connector.py
src/iot_backend/ttn_connector/: storage.py
src/iot_backend/types/: base.py  temperature.py
